# audiopac

./: .gitignore  .zenodo.json  LICENSE  PRIVACY.md  README.md  audiopac.sh  index.html  package.json  paper_extraction.md  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release-signpath.yml.disabled  release.yml
docs/: ROADMAP_PAC.md  SIGNING.md  SIGNPATH_APPLICATION.md
public/coupler/: README.txt
scripts/: build-hint-es-clinico-pack.mjs  build-sharvard-migration.mjs  generate-signing-cert.sh
scripts/git-hooks/: pre-push
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_noise_calibration.sql  002_seed_tests.sql  003_ssw.sql  004_seed_pac_tests_v2.sql  004_ssw_catch.sql  005_seed_pac_extended.sql  005_weighting.sql  006_calibration_dichotic.sql  007_seed_noise_tests.sql  008_seed_mld.sql  009_seed_gap_freq.sql  010_calibration_device.sql  011_calibration_multifreq.sql  012_stimuli.sql  013_seed_srt.sql  014_seed_dichotic_digits.sql
src-tauri/src/: lib.rs  main.rs  migrations.rs
src/components/: BatchRecordDialog.tsx  BootstrapDialog.tsx  CommandPalette.tsx  CouplerSection.tsx  DichoticDigitsRun.tsx  HINTRun.tsx  MatrixRun.tsx  PackDetailDialog.tsx  PacksSection.tsx  PatientCombobox.tsx  PatientInstructionsModal.tsx  PatternsRun.tsx  PhonemeBalanceChart.tsx  PreSessionCheck.tsx  PreviewBanner.tsx  SRTRun.tsx  SSWRun.tsx  SchemaIncompatibleDialog.tsx  SequenceBuilder.tsx  StimulusEditDialog.tsx  (+3 more)
(+73 files in other folders)
